[metadata]
name = git-ranch
url = https://github.com/AustinTSchaffer/git-ranch
version = 1.0.0
description = "git-ranch" adds a new subcommand for git named "ranch".
long_description = file: Readme.md, LICENSE
license = MIT License
keywords = git, ranch
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Average Ranch Enjoyers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages =
    git_ranch

[options.entry_points]
console_scripts =
    git-ranch = git_ranch:main
