[metadata]
name = git-ranch
url = https://github.com/AustinTSchaffer/git-ranch
project_urls =
    Bug Tracker = https://github.com/AustinTSchaffer/git-ranch/issues
version = 1.0.1
author = Austin T Schaffer
author_email = schaffer.austin.t@gmail.com
description = Adds a new git subcommand named "ranch".
long_description = file: Readme.md
license = MIT License
keywords = git, ranch
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.4
packages =
    git_ranch

[options.entry_points]
console_scripts =
    git-ranch = git_ranch:main
